fixed padding on mobile, improved tooltip

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -49,6 +49,10 @@ End mixins
 /********
 Begin map
 *********/
+body {
+  box-sizing: border-box;
+}
+
 #jumbotron {
   max-width: 1100px;
   left: 50%;
@@ -57,12 +61,16 @@ Begin map
 }
 
 #map-box {
+  box-sizing: border-box;
   position: relative;
   width: 800px;
   @media (min-width: 1200px) {
     float: left;
   }
   @media (max-width: 1200px) {
+    width: 100%;
+    padding: 0px 15px;
+    max-width: 800px;
     @include centered;
   }
 }
@@ -164,7 +172,6 @@ Begin map
   #info-holder {
     box-sizing: border-box;
     padding: 10px;
-    position: absolute;
     bottom: 0;
     width: 100%;
     max-width: 800px;
@@ -273,12 +280,19 @@ input {
 /* Begin filter options */
 
 #left {
+  position: relative;
   box-sizing: border-box;
   padding-right: 20px;
   width: 100%;
+  max-width: 800px;
   @media (min-width: 1200px) {
-    float:left; 
+    position: initial;
+    float: left; 
     width: 300px;
+  }
+  @media (max-width: 1200px) {
+    padding: 15px;
+    @include centered;
   }
 }
 
